k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: biblio
  labels:
    name: biblio
    environment: production
